# docs/swagger.json
@@ -283,6 +283,52 @@
                 }
             }
         },
+        "/places": {
+            "get": {
+                "description": "GetPlaces by selected page",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Places"
+                ],
+                "summary": "PlacesList",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page of events",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Place"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessageBadRequest"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMessageInternalServer"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "description": "Find a user by id",
@@ -429,12 +475,19 @@
         },
         "models.Event": {
             "type": "object",
+            "required": [
+                "about",
+                "category",
+                "description",
+                "name"
+            ],
             "properties": {
                 "about": {
                     "type": "string"
                 },
                 "category": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 20
                 },
                 "description": {
                     "type": "string"
@@ -466,6 +519,36 @@
                 "password": {
                     "type": "string",
                     "example": "12345678"
+                }
+            }
+        },
+        "models.Place": {
+            "type": "object",
+            "required": [
+                "about",
+                "category",
+                "description",
+                "name"
+            ],
+            "properties": {
+                "about": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string",
+                    "maxLength": 20
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "img_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -526,9 +609,6 @@
         },
         "models.Tokens": {
             "type": "object",
-            "required": [
-                "refresh_token"
-            ],
             "properties": {
                 "access_token": {
                     "type": "string",
