# internal/models/utils.go
@@ -20,3 +20,22 @@ func ToUserModel(userDB *UserDB) (*User) {
 
 	return user
 }
+
+func ToPlaceModel(placeDB *PlaceDB) (*Place) {
+	place := &Place{
+		ID: placeDB.ID,
+		Name: placeDB.Name,
+		Description: placeDB.Description,
+		Category: placeDB.Category,
+	}
+
+	if placeDB.About.Valid {
+		place.About = placeDB.About.String
+	}
+
+	if placeDB.ImgUrl.Valid {
+		place.ImgUrl = placeDB.ImgUrl.String
+	}
+
+	return place
+}
